--- a/src/containers/Home/components/UsesOfAlpha/index.scss
+++ b/src/containers/Home/components/UsesOfAlpha/index.scss
@@ -3,6 +3,10 @@
   margin: 4rem auto;
   margin-top: 11rem;
 
+  @media screen and (max-width: 900px) {
+    margin-top: 5rem;
+  }
+
   @media screen and (max-width: 600px) {
     margin-top: 23rem;
   }
@@ -10,6 +14,10 @@
   h1 {
     font-size: 2rem;
     text-align: center;
+
+    @media screen and (max-width: 900px) {
+      font-size: 1.7rem;
+    }
   }
 
   .use_card_section {
@@ -19,12 +27,21 @@
     width: 100%;
     margin-top: 2rem;
 
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 900px) {
       flex-direction: column;
     }
 
     .use_card {
       width: 31%;
+
+      @media screen and (max-width: 900px) {
+        width: 60%;
+        margin: 3rem auto !important;
+
+        h3 {
+          text-align: center;
+        }
+      }
 
       @media screen and (max-width: 600px) {
         width: 100%;
@@ -43,8 +60,10 @@
       p {
         font-size: 14px;
         width: 85%;
-        @media screen and (max-width: 600px) {
+
+        @media screen and (max-width: 900px) {
           margin: 0 auto;
+          text-align: center;
         }
       }
     }
